--- a/popmoongames_site/sobre.html
+++ b/popmoongames_site/sobre.html
@@ -20,7 +20,7 @@
     <main>
         <h1 style="text-align: center; color:yellow; font-size: 30px; font-family: 'Press Start 2P';">Popmoon: A Jornada de uma ideia que virou
             realidade</h1>
-        <p style="color: #ffe4f2; font-size: 25px; font-family: 'Press Start 2P';"> Em maio de 2024, em um ambiente acadêmico repleto de desafios e
+        <p style="color: #ffe4f2; font-size: 25px; font-family: 'Press Start 2P';"> Em março de 2024, em um ambiente acadêmico repleto de desafios e
             expectativas, nasceu a Popmoon, uma empresa que começou como um projeto de faculdade, mas rapidamente se
             transformou em algo muito maior. O nome, inspirado na ideia de uma lua que ilumina e reflete a energia das
             estrelas ao seu redor, representava perfeitamente o objetivo da equipe: criar uma marca que brilhasse e
